Started ML state of art

--- a/LaTeXi/introduzione.tex
+++ b/LaTeXi/introduzione.tex
@@ -1,3 +1,7 @@
 \chapter{Introduzione}
 \label{chap:introduzione}
-Introduzione alla situazione odierna.
+In una società sempre più digitalizzata e dinamica, spesso viene a crearsi un netto distacco tra i settori capaci di evolvere assieme alla tecnologia, e quelli che, per un motivo o per l'altro, rimangono ancorati a procedure e metodologie tradizionali. Il settore medico, in continuo rinnovamento sul lato scientifico, è, soprattutto in Italia, affidato ad infrastrutture informatiche progettate tempo fa. Questo, soprattutto per motivi di stabilità e affidabilità: gli errori, qui, non sono ammissibili. \\
+Per questo motivo, spesso non si notano le evidenti possibilità di miglioramenti che la ricerca informatica potrebbe apportare agli ospedali, agli ambulatori, agli studi.
+L'obiettivo di questa tesi è mettere luce su una delle possibili modalità con cui l'informatica potrebbe, in un futuro prossimo, migliorare la praticità ma soprattutto la sicurezza degli ambienti ospedalieri.\\
+La procedura di triage, ossia il processo di selezione dei pazienti richiedenti cure, è oggi affidata totalmente ad infermieri. Questa scelta è dovuta, oltre ad un evidente bisogno di poter osservare il paziente, alla necessità dell'immediatezza di un contatto verbale con il personale sanitario. \\
+Perciò, la sfida nella realizzazione della tesi è soprattutto legata al rendere il più umana possibile l'interazione con un bot automatizzato. Il bot deve quindi accogliere il paziente, comprenderne le problematiche ed i sintomi, e farlo sentire protetto. Non si escluderà del tutto un apporto umano: gli infermieri sono addestrati per poter osservare e comprendere il richiedente cura, e l'apporto dell'osservazione diretta del paziente è ancora troppo importante per escluderla. È senz'altro possibile, però, affidare la prima parte di profilazione dell'utente a procedure automatizzate.
