--- a/LaTeXi/tesi.tex
+++ b/LaTeXi/tesi.tex
@@ -107,9 +107,7 @@
 % LISTA DEI CAPITOLI DA INCLUDERE - PERSONALIZZARE
 \includeonly{%
 introduzione,%
-chap_qui,%
-chap_quo,%
-chap_qua,%
+stateofart,%
 app_a,%
 }
 
@@ -184,8 +182,8 @@ app_a,%
 % FLUSHRIGHT - ALLINEAMENTO ORIZZONTALE A DESTRA
 \vspace*{\stretch{1}}
 \begin{flushright}
-\noindent
-Dedica toccante.
+  \noindent
+  Dedica toccante.
 \end{flushright}
 \vspace*{\stretch{6}}
 \cleardoublepage
@@ -196,10 +194,10 @@ Dedica toccante.
 % FLUSHRIGHT - ALLINEAMENTO ORIZZONTALE A DESTRA
 \vspace*{\stretch{1}}
 \begin{flushright}
-\noindent
-Citatemi dicendo che sono stato citato male.
+  \noindent
+  Citatemi dicendo che sono stato citato male.
 
-\textit{Groucho Marx}
+  \textit{Groucho Marx}
 \end{flushright}
 \vspace*{\stretch{6}}
 \cleardoublepage
@@ -238,9 +236,7 @@ Piacere, sommario.
 
 % INCLUSIONE FILE CAPITOLI - PERSONALIZZARE - TENERE COERENTE CON LISTA IN ALTO
 \include{introduzione}
-\include{chap_qui}
-\include{chap_quo}
-\include{chap_qua}
+\include{stateofart}
 
 \appendix
 % INCLUSIONE APPENDICI - - PERSONALIZZARE - TENERE COERENTE CON LISTA IN ALTO
