--- a/LaTeXi/bibliography.bib
+++ b/LaTeXi/bibliography.bib
@@ -1,22 +1,20 @@
-@article{famous:paper,
-	author = "Vader, Darth  and Cortex, Neo",
-	doi = "10.1145/1327452.1327492",
-	journal = "Stampo Solo",
-	keywords = "important",
-	pages = "107--113",
-	title = "{Hell yeah! I'm a super important paper!}",
-	url = "http://www.foo.com",
-	volume = 51,
-	year = 2008
+@book{book:encyclopedia_of_ml,
+	title =     {Encyclopedia of Machine Learning and Data Mining},
+	author =    {Claude Sammut (Editor), Geoffrey I. Webb (Editor)},
+	publisher = {Springer},
+	isbn =      {148997685X, 978-1489976857},
+	year =      {2017},
+	series =    {},
+	edition =   {2},
+	volume =    {},
 }
-
-@book{notcited:book,
-	author = "Cane, Carlino",
-	edition = "first edition",
-	editor = "Leggoo, Anche",
-	keywords = "non-citato",
-	publisher = "O'Reilly",
-	title = "{No one cited me}",
-	url = "http://bar.com/",
-	year = 2009
+@book{book:mitchell1997machine,
+	title={Machine Learning},
+	author={Mitchell, T.M.},
+	isbn={9780071154673},
+	lccn={97007692},
+	series={McGraw-Hill International Editions},
+	url={https://books.google.it/books?id=EoYBngEACAAJ},
+	year={1997},
+	publisher={McGraw-Hill}
 }
