Utilizzo dei chatbot in ambito medico

--- a/LaTeXi/bibliography.bib
+++ b/LaTeXi/bibliography.bib
@@ -1,20 +1,38 @@
 @book{book:encyclopedia_of_ml,
-	title =     {Encyclopedia of Machine Learning and Data Mining},
-	author =    {Claude Sammut (Editor), Geoffrey I. Webb (Editor)},
-	publisher = {Springer},
-	isbn =      {148997685X, 978-1489976857},
-	year =      {2017},
-	series =    {},
-	edition =   {2},
-	volume =    {},
+    title =     {Encyclopedia of Machine Learning and Data Mining},
+    author =    {Claude Sammut (Editor), Geoffrey I. Webb (Editor)},
+    publisher = {Springer},
+    isbn =      {148997685X, 978-1489976857},
+    year =      {2017},
+    series =    {},
+    edition =   {2},
+    volume =    {},
 }
 @book{book:mitchell1997machine,
-	title={Machine Learning},
-	author={Mitchell, T.M.},
-	isbn={9780071154673},
-	lccn={97007692},
-	series={McGraw-Hill International Editions},
-	url={https://books.google.it/books?id=EoYBngEACAAJ},
-	year={1997},
-	publisher={McGraw-Hill}
+    title={Machine Learning},
+    author={Mitchell, T.M.},
+    isbn={9780071154673},
+    lccn={97007692},
+    pages = {81-88},
+    series={McGraw-Hill International Editions},
+    url={https://books.google.it/books?id=EoYBngEACAAJ},
+    year={1997},
+    publisher={McGraw-Hill}
+}
+@article{article:introduction_to_va,
+    author = {Hoy, Matthew},
+    year = {2018},
+    month = {01},
+    pages = {81-88},
+    title = {Alexa, Siri, Cortana, and More: An Introduction to Voice Assistants},
+    volume = {37},
+    journal = {Medical Reference Services Quarterly},
+    doi = {10.1080/02763869.2018.1404391}
+}
+@article{article:voicebot_research,
+    author = {Voicebot - Orbita},
+    year = {2019},
+    month = {10},
+    title = {Voice Assistant Consumer Adoption in Healthcare},
+    url = {https://voicebot.ai/wp-content/uploads/2019/10/voice_assistant_consumer_adoption_in_healthcare_report_voicebot.pdf}
 }
