--- a/LaTeXi/tesi.tex
+++ b/LaTeXi/tesi.tex
@@ -22,6 +22,7 @@
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{float}
+\usepackage{float}
 \usepackage{amssymb}
 \usepackage{multicol}
 \usepackage{multirow}
@@ -206,14 +207,13 @@ app_a,%
 
 % RINGRAZIAMENTI - PERSONALIZZARE
 \ringraziamenti
-Grazie a Grazia, Graziella e la sorella.
+Grazie
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % ABSTRACT - PERSONALIZZARE
 \sommario
-Piacere, sommario.
-
+Abstract della tesi
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % INDICI - ELIMINARE GLI INDICI NON NECESSARI
@@ -228,7 +228,7 @@ Piacere, sommario.
 %\listoftables
 
 % INDICE DEI CODICI
-\listofcodes
+%\listofcodes
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
