Triage state o' fart

--- a/LaTeXi/bibliography.bib
+++ b/LaTeXi/bibliography.bib
@@ -36,3 +36,10 @@
     title = {Voice Assistant Consumer Adoption in Healthcare},
     url = {https://voicebot.ai/wp-content/uploads/2019/10/voice_assistant_consumer_adoption_in_healthcare_report_voicebot.pdf}
 }
+@article{article:digital_triage,
+    author = {Piers Ford},
+    year = {2020},
+    month = {05},
+    title = {Digital triage changes the game for UK GP practices in the age of COVID-19},
+    url = {https://www.mobihealthnews.com/news/europe/digital-triage-changes-game-uk-gp-practices-age-covid-19}
+}
