--- a/LaTeXi/stateofart.tex
+++ b/LaTeXi/stateofart.tex
@@ -34,3 +34,22 @@ Un report \cite{article:voicebot_research} di Voicebot, organizzazione per la di
     \label{fig:consumer-interest}
 \end{figure}
 Un altro esempio interessante di applicazione della tecnologia in ambito medico è \textit{Dragon Medical Virtual Assistant} rilasciato da \textbf{Nuance}, una suite di strumenti vocali capaci di creare cartelle cliniche, eseguire diagnostica sul paziente, fornire risultati in diretta di ricerche mediche, supportare le operazioni di radiologia.
+\section{Triage}
+\begin{wrapfigure}{r}{0.3\textwidth}
+    \begin{center}
+        \includegraphics[width=0.28\textwidth]{images/Schema-CESIRA-ombra.png}
+    \end{center}
+    \caption{Schema del protocollo CESIRA}
+\end{wrapfigure}
+Il \textbf{triage} è, per definizione, il sistema utilizzato per selezionare i soggetti coinvolti in infortuni, gravi o leggeri che siano, secondo classi di emergenza, in base alla gravità delle lesioni riportate o del loro quadro clinico. Il termine nacque in ambiti di guerra (se ne comincia a parlare durante le \textit{guerre napoleoniche}), durante i quali si classificavano i soldati feriti in base alla probabilità di sopravvivenza. Il procedimento venne poi, negli anni, iniziato ad utilizzare in ambito ospedaliero, con l'applicazione di metodi più scientifici, come il modello \textit{START}, basato su un algoritmo che prevede la verifica di sintomi visibili, frequenza respiratoria, pulsazioni, risposta ai comandi. Sebbene inizialmente le procedure di triage fossero considerate solo in ambito di maxiemergenze, oggi tutti i pronto soccorso italiani ne fanno uso in qualche modo. Non esiste però uno standard di codici utilizzati in ogni ospedale: le normative cambiano tra un pronto soccorso e l'altro.
+Distinguiamo però, generalmente, 4 tipi di codice:
+\begin{itemize}
+    \item Codice \textbf{rosso}: paziente critico con cedimento di una o più funzioni vitali. \textit{Accesso immediato.}
+    \item Codice \textbf{giallo}: potenziale rischio di vita o compromissione di una o più funzioni vitali. \textit{Accesso entro 15 minuti.}
+    \item Codice \textbf{verde}: valutazione medica differibile nel tempo senza alcun rischio evolutivo. \textit{Accesso entro 60-90 minuti.}
+    \item Codice \textbf{bianco}: paziente senza emergenza, con problematiche risolvibili a domicilio o dal medico di famiglia.
+\end{itemize}
+Il triage infermieristico produce quindi una \textbf{scheda di triage}, che ha valore giuridico, contenente anagrafica, data/ora di accettazione, motivo, codice colore.
+Durante le emergenze è comune utilizzare il protocollo \textbf{CESIRA} (\textbf{C}oscienza, \textbf{E}morragia, \textbf{S}hock, \textbf{I}nsufficienza respiratoria, \textbf{R}otture, \textbf{A}ltro).
+\subsection{Come il COVID19 ha modificato le procedure di triage}
+La pandemia mondiale di COVID19 ha modificato i processi di triage in ospedale: lo scopo è limitare al massimo le possibilità di contagio tra i pazienti, rendendo il pronto soccorso più sicuro tanto per i pazienti, quanto per il personale sanitario. Alcuni ospedali in Inghilterra hanno addirittura iniziato a praticare triage remoto: il paziente comunica le sintomatologie online e, solo se necessario, può recarsi in ospedale per la visita medica \cite{article:digital_triage}. In Italia, ogni ospedale ha provveduto a definire delle procedure di \textbf{pre-triage} atte ad evitare il contatto tra pazienti affetti da COVID19 e non. Generalmente, si tratta di percorsi obbligati in cui i pazienti con sintomi compatibili con COVID19 (febbre, tosse, insufficienza respiratoria) vengono separati in un'\textit{area di decontaminazione} e visitati senza accedere agli ambienti del pronto soccorso comune. Nell'ospedale Maggiore di Parma sono state previste, durante i momenti di picco dell'epidemia, due tende di pre-triage esterne all'ospedale stesso.
