--- a/LaTeXi/tesi.tex
+++ b/LaTeXi/tesi.tex
@@ -31,6 +31,7 @@
 \usepackage[figuresright]{rotating}
 \usepackage{algorithm}
 \usepackage{algorithmic}
+\usepackage{wrapfig}
 \usepackage{amsmath}
 \usepackage[babel]{csquotes}
 \usepackage{hyperref}
