--- a/LaTeXi/tesi.tex
+++ b/LaTeXi/tesi.tex
@@ -1,5 +1,5 @@
 %CLASSE DOCUMENTO - LINGUA E DIMENSIONE FONT
-\documentclass[corpo=11pt,numerazioneromana]{toptesi}
+\documentclass[trieste,corpo=11pt,numerazioneromana]{toptesi}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -160,7 +160,7 @@ app_a,%
 %\CandidateName{Candidate:}
 
 % CANDIDATO - NOME E COGNOME
-\candidato{Simone Montali}
+\candidato{Simone Montali}[288144]
 
 % LOGO UNIVERSITA
 \logosede{images/logo}
