Typos and formatting

--- a/LaTeXi/stateofart.tex
+++ b/LaTeXi/stateofart.tex
@@ -61,14 +61,15 @@ Un report \cite{article:voicebot_research} di Voicebot, organizzazione per la di
     \label{fig:consumer-interest-forage}
 \end{figure}
 Un altro esempio interessante di applicazione della tecnologia in ambito medico è \textit{Dragon Medical Virtual Assistant} rilasciato da \textbf{Nuance}, una suite di strumenti vocali capaci di creare cartelle cliniche, eseguire diagnostica sul paziente, fornire risultati in diretta di ricerche mediche, supportare le operazioni di radiologia.
+\newpage
 \section{Triage}
-\begin{wrapfigure}{r}{0.3\textwidth}
+\begin{wrapfigure}{r}{0.27\textwidth}
     \begin{center}
-        \includegraphics[width=0.28\textwidth]{images/Schema-CESIRA-ombra.png}
+        \includegraphics[width=0.25\textwidth]{images/Schema-CESIRA-ombra.png}
     \end{center}
     \caption{Schema del protocollo CESIRA}
 \end{wrapfigure}
-Il \textbf{triage} è, per definizione, il sistema utilizzato per selezionare i soggetti coinvolti in infortuni, gravi o leggeri che siano, secondo classi di emergenza, in base alla gravità delle lesioni riportate o del loro quadro clinico. Il termine nacque in ambiti di guerra (se ne comincia a parlare durante le \textit{guerre napoleoniche}), durante i quali si classificavano i soldati feriti in base alla probabilità di sopravvivenza. Il procedimento venne poi, negli anni, iniziato ad utilizzare in ambito ospedaliero, con l'applicazione di metodi più scientifici, come il modello \textit{START}, basato su un algoritmo che prevede la verifica di sintomi visibili, frequenza respiratoria, pulsazioni, risposta ai comandi. Sebbene inizialmente le procedure di triage fossero considerate solo in ambito di maxiemergenze, oggi tutti i pronto soccorso italiani ne fanno uso in qualche modo. Non esiste però uno standard di codici utilizzati in ogni ospedale: le normative cambiano tra un pronto soccorso e l'altro.
+Il \textbf{triage} è, per definizione, il sistema utilizzato per selezionare i soggetti coinvolti in infortuni, gravi o leggeri che siano, secondo classi di emergenza, in base alla gravità delle lesioni riportate o del loro quadro clinico. Il termine nacque in ambiti di guerra (se ne cominciò a parlare durante le \textit{guerre napoleoniche}), durante i quali si classificavano i soldati feriti in base alla probabilità di sopravvivenza. Il procedimento venne poi, negli anni, iniziato ad utilizzare in ambito ospedaliero, con l'applicazione di metodi più scientifici come il modello \textit{START}, basato su un algoritmo che prevede la verifica di sintomi visibili, frequenza respiratoria, pulsazioni, risposta ai comandi. Sebbene inizialmente le procedure di triage fossero sfruttate solo in ambito di maxiemergenze, oggi tutti i pronto soccorso italiani ne fanno uso in qualche modo. Non esiste però uno standard di codici utilizzati in ogni ospedale: le normative cambiano tra un pronto soccorso e l'altro.
 Distinguiamo però, generalmente, 4 tipi di codice:
 \begin{itemize}
     \item Codice \textbf{rosso}: paziente critico con cedimento di una o più funzioni vitali. \textit{Accesso immediato.}
