--- a/LaTeXi/tesi.tex
+++ b/LaTeXi/tesi.tex
@@ -13,6 +13,7 @@
 \usepackage{booktabs}
 \usepackage{lmodern}
 \usepackage{varioref}
+\usepackage{epigraph}
 \usepackage{url}
 \usepackage{array}
 \usepackage{paralist}{\obeyspaces\global\let =\space}
@@ -110,6 +111,7 @@
 \includeonly{%
 introduzione,%
 stateofart,%
+mycroft,%
 app_a,%
 }
 
@@ -238,6 +240,7 @@ Abstract della tesi
 % INCLUSIONE FILE CAPITOLI - PERSONALIZZARE - TENERE COERENTE CON LISTA IN ALTO
 \include{introduzione}
 \include{stateofart}
+\include{mycroft}
 
 \appendix
 % INCLUSIONE APPENDICI - - PERSONALIZZARE - TENERE COERENTE CON LISTA IN ALTO
