--- a/LaTeXi/tesi.tex
+++ b/LaTeXi/tesi.tex
@@ -151,13 +151,13 @@ app_a,%
 \sottotitolo{Triage semi-automatizzato per la sicurezza e la tempestività}
 
 % RELATORE/I - DICITURA - CANCELLARE SE UN SOLO RELATORE
-%\AdvisorName{Relatori}
+\AdvisorName{Relatori}
 % RELATORE - PROF. NOME E COGNOME
 \relatore{prof.ssa\ Mordonini Monica}
 % RELATORE AGGIUNTIVO - PROF NOME E COGNOME
 % SE SI HA SOLO UN RELATORE ELIMINARE INSIEME AD AdvisorName
-\secondorelatore{prof.\ Tomaiuolo Michele}
-\terzorelatore{prof.\ Angiani Giulio}
+\terzorelatore{prof.\ Tomaiuolo Michele}
+%\terzorelatore{prof.\ Angiani Giulio}
 % CANDIDATO - DICITURA (MANTENERE I DUE PUNTI) - CANCELLARE O DECOMMENTARE
 %\CandidateName{Candidate:}
 
