Added skill creation chapter

--- a/LaTeXi/tesi.tex
+++ b/LaTeXi/tesi.tex
@@ -36,8 +36,8 @@
 \usepackage{amsmath}
 \usepackage[babel]{csquotes}
 \usepackage{hyperref}
+\usepackage{minted}
 \usepackage[backend=biber,bibencoding=ascii]{biblatex}
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -112,6 +112,7 @@
 introduzione,%
 stateofart,%
 mycroft,%
+skills,
 app_a,%
 }
 
@@ -241,6 +242,7 @@ Abstract della tesi
 \include{introduzione}
 \include{stateofart}
 \include{mycroft}
+\include{skills}
 
 \appendix
 % INCLUSIONE APPENDICI - - PERSONALIZZARE - TENERE COERENTE CON LISTA IN ALTO
