Added inference section

--- a/LaTeXi/tesi.tex
+++ b/LaTeXi/tesi.tex
@@ -27,6 +27,7 @@
 \usepackage{amssymb}
 \usepackage{multicol}
 \usepackage{multirow}
+\usepackage{tabularx}
 \usepackage{listings}
 \usepackage[pass]{geometry}
 \usepackage[figuresright]{rotating}
@@ -112,7 +113,8 @@
 introduzione,%
 stateofart,%
 mycroft,%
-skills,
+skills,%
+inference,%
 app_a,%
 }
 
@@ -243,6 +245,7 @@ Abstract della tesi
 \include{stateofart}
 \include{mycroft}
 \include{skills}
+\include{inference}
 
 \appendix
 % INCLUSIONE APPENDICI - - PERSONALIZZARE - TENERE COERENTE CON LISTA IN ALTO
