--- a/LaTeXi/inference.tex
+++ b/LaTeXi/inference.tex
@@ -41,7 +41,7 @@ y = y.values
 \end{minted}
 \subsubsection{Vettorizzazione del dataset}
 Abbiamo ora un dataset testuale, è necessario esprimerlo in termini numerici per poter addestrare la rete. Per questo, procediamo alla \textbf{vettorizzazione del testo}, ossia la trasposizione di un testo in forma vettoriale. Esistono varie soluzioni a questo problema, come la creazione di \textit{sparse arrays}, ossia vettori contenenti un grande numero di 0, e 1 nel caso una parola sia presente.
-Se ad esempio avessimo un dataset di due frasi, \textit{"mi piacciono le reti neurali"} e \textit{"non mi piacciono i serpenti"}, la rappresentazione della prima frase sarebbe la seguente:
+Se ad esempio avessimo un dataset di due frasi, \textit{"mi piacciono le reti neurali"} e \textit{"non mi piacciono i delfini"}, la rappresentazione della prima frase sarebbe la seguente:
 \begin{table}[]
     \begin{tabular}{llllllll}
         non & piacciono & mi & i & delfini & neurali & reti & le \\
