--- a/LaTeXi/tesi.tex
+++ b/LaTeXi/tesi.tex
@@ -114,7 +114,7 @@ introduzione,%
 stateofart,%
 mycroft,%
 skills,%
-inference,%
+fallback,%
 app_a,%
 }
 
@@ -245,7 +245,7 @@ Abstract della tesi
 \include{stateofart}
 \include{mycroft}
 \include{skills}
-\include{inference}
+\include{fallback}
 
 \appendix
 % INCLUSIONE APPENDICI - - PERSONALIZZARE - TENERE COERENTE CON LISTA IN ALTO
