--- a/LaTeXi/tesi.tex
+++ b/LaTeXi/tesi.tex
@@ -115,6 +115,7 @@ stateofart,%
 mycroft,%
 skills,%
 fallback,%
+informations,%
 app_a,%
 }
 
@@ -246,6 +247,7 @@ Abstract della tesi
 \include{mycroft}
 \include{skills}
 \include{fallback}
+\include{informations}
 
 \appendix
 % INCLUSIONE APPENDICI - - PERSONALIZZARE - TENERE COERENTE CON LISTA IN ALTO
